<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_library">

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.cmput301f20t21.bookfriends.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_tab" />

    <fragment
        android:id="@+id/navigation_borrow"
        android:name="com.cmput301f20t21.bookfriends.ui.borrow.BorrowFragment"
        android:label="@string/title_borrow"
        tools:layout="@layout/fragment_borrow" />

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.cmput301f20t21.bookfriends.ui.browse.BrowseFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.cmput301f20t21.bookfriends.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>