<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="5sp" >

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/filter_menu_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_available" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/filter_menu_requested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_requested" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/filter_menu_accepted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_accepted" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/filter_menu_borrowed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_borrowed" />
</LinearLayout>