<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ProfileMeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/username"
            android:layout_width="345dp"
            android:layout_height="56dp"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@string/user_name"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="212dp"
            android:layout_height="35dp"
            android:layout_marginBottom="144dp"
            android:background="@drawable/button_round_corner"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/string_logout"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/image_edit"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintBottom_toTopOf="@+id/layout_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintVertical_bias="0.443"
            tools:src="@tools:sample/avatars"
            android:src="@drawable/ic_edit"
            tools:srcCompat="@drawable/ic_edit"
            android:contentDescription="@string/profile_edit" />

        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.458"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/image_email"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:contentDescription="@string/icon_email"
                android:src="@drawable/ic_baseline_email_24"
                tools:src="@tools:sample/avatars"
                tools:srcCompat="@drawable/ic_baseline_email_24" />

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                 />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/profile_search_list_container_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"
        android:visibility="gone"
        android:layout_gravity="top"
        />
</FrameLayout>